# TextEditor

./: CMakeLists.txt  README.md  TextEditor.pro  configure.sh
icons/: icons.qrc
osx_bundle/: Info.plist
src/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  mainwindow.cpp  mainwindow.h
