PROJECT(TextEditor)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(DEFINED ENV{QTDIR})
    SET(CMAKE_PREFIX_PATH $ENV{QTDIR} ${CMAKE_PREFIX_PATH})
ELSE()
    MESSAGE(FATAL_ERROR "ERROR: Environment variable QTDIR is not set. Please locate your Qt folder MY_QT5_DIR.")
ENDIF()

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUNDLE ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

ADD_SUBDIRECTORY(src)

