CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(DEFINED ENV{QTDIR})
    SET(CMAKE_PREFIX_PATH $ENV{QTDIR} ${CMAKE_PREFIX_PATH})
ELSE()
    MESSAGE(FATAL_ERROR "ERROR: Environment variable QTDIR is not set. Please locate your Qt folder MY_QT5_DIR.")
ENDIF()

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

SET(TE_SOURCES main.cpp mainwindow.cpp)
SET(TE_HEADERS mainwindow.h)
SET(TE_RESOURCES ../TextEditor.qrc)

QT5_ADD_RESOURCES(TE_RCC ${TE_RESOURCES})

ADD_EXECUTABLE(TextEditor ${TE_SOURCES} ${TE_HEADERS})
QT5_USE_MODULES(TextEditor Widgets)
