SET(TE_SOURCES main.cpp mainwindow.cpp)
SET(TE_HEADERS mainwindow.h)
SET(TE_RESOURCES ${CMAKE_SOURCE_DIR}/icons/icons.qrc)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

QT5_ADD_RESOURCES(RESOURCES_ADDED ${TE_RESOURCES})

ADD_EXECUTABLE(${PROJECT_NAME} MACOSX_BUNDLE WIN32 ${TE_SOURCES} ${TE_HEADERS} ${RESOURCES_ADDED})

IF(APPLE)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PROJECT_SOURCE_DIR}/osx_bundle/Info.plist)
ENDIF(APPLE)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Widgets)
